plugins {
	id 'org.springframework.boot' version '2.1.0.RELEASE'
	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
//	id 'java' // the plugin to add support for java or can declare  apply plungin : 'java'
}
apply plugin: 'java'
apply plugin: 'checkstyle'
apply plugin: 'findbugs'
apply plugin: 'pmd'

defaultTasks 'clean', 'build'  // neu chay  gradle -q nếu không có task nào chỉ định sẽ chạy cái này

group = 'GroupTest'  // ben pacagke
version = '0.0.1'  // file jar
sourceCompatibility = '1.8' // là java 1.8

repositories {
    // để tìm ở đâu to find dependencies of your project   // kho chứa maven
    mavenCentral()

//    mavenLocal() đinh nghĩa maven local save ở USER_HOME/.m2/repository.
//    maven {
//        name "HEB PM Snapshots"
//        url "http://nexus-lib.heb.com/nexus/content/repositories/PM-Snapshots"
//    }
}

dependencies {
	// inject dependencies for your project that you need
	implementation 'org.springframework.boot:spring-boot-starter'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'

//    // hibernate
//    compile group: 'javax.persistence', name: 'javax.persistence-api', version: '2.2'

//    // walletRepository.findById(2L)
//    compile group: 'org.springframework.data', name: 'spring-data-jpa', version: '2.2.7.RELEASE'
//
//    compile group: 'org.springframework', name: 'spring-tx', version: '3.0.5.RELEASE'
//
//    compile group: 'org.springframework.boot', name: 'spring-boot-configuration-processor', version: '2.1.0.RELEASE'
//
//    // https://mvnrepository.com/artifact/mysql/mysql-connector-java
//    compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.13'
//
//    implementation 'org.springframework.boot:spring-boot-starter-web:2.1.0.RELEASE'
//    implementation 'javax.xml.bind:jaxb-api:2.3.0'


    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.1.0.RELEASE'
    implementation 'org.springframework.boot:spring-boot-starter-web:2.1.0.RELEASE'
    implementation 'com.h2database:h2:1.4.197'
    implementation 'javax.xml.bind:jaxb-api:2.3.0'
    implementation 'mysql:mysql-connector-java:8.0.13'
    implementation 'org.springframework.boot:spring-boot-starter-data-jdbc:2.1.0.RELEASE'
    implementation 'org.springframework.boot:spring-boot-starter-test:2.1.0.RELEASE'
    implementation 'org.springframework.boot:spring-boot-configuration-processor:2.1.0.RELEASE'

    /// implementation và comple khác nhau gì
//    https://stackoverflow.com/questions/44493378/whats-the-difference-between-implementation-and-compile-in-gradle
    //https://stackoverflow.com/questions/44402024/why-android-change-compile-to-implementation-configuration-in-gradle-depende
}

test {  // ignore test  @Test , @SpringBootTest ....
    ignoreFailures = true
    // This is needed as groovy/Spring are using reflection into the JVM which is no longer allowed by default.
    // See https://stackoverflow.com/questions/41265266/how-to-solve-inaccessibleobjectexception-unable-to-make-member-accessible-m/41265267
    // it's not the same error message, but is similar.
//    jvmArgs "--add-opens=java.base/jdk.internal.loader=ALL-UNNAMED"
}

checkstyle {
    ignoreFailures = true
    toolVersion '7.8.1'
    configFile file("config/checkstyle/checkstyle.xml")
    configDir = file("$rootProject.projectDir/config/checkstyle")
}
checkstyleMain {
    ignoreFailures = true// chỉ cần thiết khi sủ dụng cái này khi sử dụng gradle build
    source ='src/main/java'
}
checkstyleTest {
    source ='src/test/java'
}


tasks.withType(FindBugs) {
    reports {
        xml.enabled = false
        html.enabled = true
    }
}
findbugs{
    ignoreFailures=false
    findbugsTest.enabled=false
}
tasks.withType(FindBugs) {
    reports {
        xml.enabled = false
        html.enabled = true
    }
}
pmd {
	ignoreFailures = false
	pmdTest.enabled = false
	toolVersion '6.12.0'
	ruleSetFiles = files("config/pmd/ruleset.xml")
	ruleSets = []
}